# juniper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  train.py
.github/workflows/: pre-commit.yaml  pytest.yaml
juniper/common/: component.py  data_type.py  export.py  schema_tools.py  setup.py
juniper/data_loading/: data_source.py  feature_store.py  feature_types.py  json_normalize.py  outcomes.py
juniper/modeling/: layers.py  metrics.py  model_wrapper.py  torch.py  utils.py  xgboost.py
juniper/preprocessor/: cast_transformer.py  column_normalizer.py  constant_imputer.py  metadata.py  periodic_transformer.py  pipelines.py  preprocessor.py
juniper/preprocessor/dask/: column_normalizer.py  column_transformer.py  constant_imputer.py  robust_scaler.py
juniper/training/: layers.py  losses.py  metrics.py  model_wrapper.py  nan_ops.py  utils.py
juniper/validation/: time_series_split.py
src/common/: data_type.py  schema_tools.py  setup.py
src/data_loading/: data_source.py  feature_store.py  json_normalize.py  outcomes.py
src/preprocessor/: metadata.py  pipelines.py  preprocessor.py
src/preprocessor/dask/: cast_transformer.py  column_normalizer.py  column_transformer.py  constant_imputer.py  robust_scaler.py
src/validation/: time_series_split.py
tests/: conftest.py  test_config.toml  test_cv_split.py  test_feature_store.py  test_layers.py  test_onnx.py  test_preprocessors.py  test_timestamp.py
tests/data/: feature_store.parquet  outcomes.parquet
