[tool.poetry]
name = "Juniper"
version = "0.1.0"
description = ""
authors = ["Eric Brown"]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "*"
ipython = "*"
jupyter = "*"
matplotlib = "*"
mypy = "*"
numpy = "*"
onnxruntime = "*"
onnxscript = "*"
pandas = "*"
# pandas ">=3.0.0"
pyarrow = "*"
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
s3path = "*"
s3fs = ">=2024.2.0"
scikit-learn = "*"
skl2onnx = "*"
sqlalchemy = "*"
sqlalchemy-trino = "*"
tabulate = "*"
torch = "^2.2.0"
trino = "*"
xgboost = "*"


[tool.ruff]
line-length = 120
lint.select = ["E", "W", "F", "B"]

[tool.codespell]
skip = "*.sql"

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
